...
                            .height(72.dp),
                        colors = ButtonDefaults.buttonColors(
                            containerColor = MaterialTheme.colorScheme.primary
                        )
                    ) {
                        Text(
                            "RECORD PROGRESS",
                            style = MaterialTheme.typography.titleLarge
                        )
                    }
                    
                    // Cancel button
                    OutlinedButton(
...
